# course-supporter

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yaml  docker-compose.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yaml  deploy.yml  docs.yml
api/auth/: index.html
api/flow-guide/: index.html
api/quick-start/: index.html
api/reference/: index.html
architecture/decisions/: index.html
architecture/erd/: index.html
architecture/infrastructure/: index.html
config/: auth.yaml  external_services.yaml  models.yaml  platforms.yaml
current-doc/: S1-005-alembic.md  S2-043-batch-create-partial-success.md  S2-044-mapping-crud-get-delete.md  S2-045-mapping-migration.md  Sprint-1-Detailed.md  Sprint-2-ERD.mermaid  Sprint-2-Plan.md  backlog.md  database-schema.md  erd-course-vs-rootnode.md
current-doc/sprint2-docs/: README.md
current-doc/sprint3-docs/: SPRINT-3-PLAN.md
deploy/netdata/: custom-alerts.conf  health_alarm_notify.conf
deploy/nginx/: course-supporter.conf
development/deployment/: index.html
development/setup/: index.html
development/testing/: index.html
docs/: deployment.md  index.md
docs/api/: auth.md  flow-guide.md  quick-start.md  reference.md
docs/architecture/: decisions.md  erd.md  infrastructure.md
docs/development/: deployment.md  setup.md  testing.md
docs/sprints/: index.md
docs/stylesheets/: extra.css
migrations/: env.py
migrations/versions/: 3bfcc509f45c_add_jobs_table.py  4022d1da16a7_remove_job_result_fields.py  5129ac60d408_add_material_nodes_and_entries.py  63c6565a0e1b_remove_content_fingerprint.py  6990e1d9124e_initial_schema.py  a1b2c3d4e5f6_rename_task_type_add_strategy.py  a7b8c9d0e1f2_rename_llm_calls_to_external_service_calls.py  a8f1e2c3d4b5_redesign_slide_video_mappings.py  b1c2d3e4f5a6_add_course_structure_snapshots.py  b1c2d3e4f5a6_simplify_structure_snapshots.py  b1c2d3e5f6a7_simplify_structure_snapshots.py  bb847e98ee7b_add_tenants_and_api_keys.py  c2d3e4f5a6b7_expand_material_node.py  d2283f3d7212_add_learning_fields_to_courses_and_.py  d3d44a540129_make_llm_calls_tenant_id_nullable.py  d4e5f6a7b8c9_drop_course_and_legacy_tables.py  e5f6a7b8c9d0_add_structure_nodes_table.py  e7b30d6e6533_add_snapshot_step_fields.py  ec62b2f8d538_add_tenant_id_to_courses_and_llm_calls.py  f6a7b8c9d0e1_fk_rename_and_db_comments.py  f7b8d706ad9c_initial_schema_9_tables.py
past-sprints-doc/: after-sprint-0-review.md
past-sprints-doc/S1-materials-to-structure/: Sprint-1-Detailed.md
prompts/architect/: v1.yaml  v1_guided.yaml  v1_reconcile.yaml
prompts/refine/: v1.yaml
scripts/: cost_report.py  eval_architect.py  init-db.sh  manage_tenant.py  smoke_test.sh
search/: search_index.json
sprints/: index.html
sprints/sprint-0/: index.html
sprints/sprint-1/: index.html
sprints/sprint-2/: index.html
src/course_supporter/: __init__.py  config.py  conflict_detection.py  enqueue.py  errors.py  fingerprint.py  generation_orchestrator.py  ingestion_callback.py  job_priority.py  logging_config.py  queue_estimate.py  readiness.py  structure_conversion.py  tree_utils.py  worker.py  worker_window.py
tests/: conftest.py
tests/integration/: conftest.py  test_arq_task_e2e.py  test_enqueue_redis.py  test_ingestion_callback_db.py  test_job_repository.py  test_schema_sync.py
tests/unit/: test_architect_agent.py  test_architect_execute.py  test_auth_middleware.py  test_auth_registry.py  test_cascading_failure.py  test_config.py  test_conflict_detection.py  test_cost_report.py  test_course_structure.py  test_course_structure_repository.py  test_enqueue.py  test_eval_reference.py  test_execute_step_task.py  (+37 more)
(+433 files in other folders)
