[project]
name = "course-supporter"
version = "0.1.0"
description = "AI-powered course structuring and mentoring system"
requires-python = ">=3.13"
dependencies = [
    # API
    "fastapi[standard]>=0.128",
    "pydantic>=2.12",
    "pydantic-settings>=2.12",

    # LLM Providers
    # DeepSeek uses OpenAI-compatible API — no separate SDK needed,
    # works via openai.OpenAI(base_url="https://api.deepseek.com")
    "google-genai>=1.12",
    "anthropic>=0.49",
    "openai>=1.68",

    # Database
    "sqlalchemy[asyncio]>=2.0.37",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pgvector>=0.4",
    "uuid-utils>=0.9",

    # Ingestion: presentations
    "python-pptx>=1.0",
    "pymupdf>=1.25",
    "python-docx>=1.1",

    # Ingestion: web
    "trafilatura>=2.0",
    "beautifulsoup4>=4.13",

    # Object storage (MinIO / S3)
    "aiobotocore>=2.15",

    # Ingestion: video (audio extraction + transcription)
    "openai-whisper>=20240930",
    "yt-dlp>=2024.0",
    "torch>=2.0",

    # Observability
    "structlog>=25.1",

    # Config
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
    "pre-commit>=4.1",
    "httpx>=0.28",
    "types-pyyaml>=6.0.12.20250915",
]
docs = [
    "mkdocs-material>=9",
    "mkdocs-mermaid2-plugin>=1",
]

[tool.uv]
# PyTorch CPU-only: skip CUDA libs (~3.5GB -> ~200MB)
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/course_supporter"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "PTH",    # flake8-use-pathlib
    "T20",    # flake8-print (use structlog instead)
]
ignore = [
    "S101",   # assert in tests is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "S108", "T20"]
"scripts/**/*.py" = ["S101", "T20"]
# Alembic autogenerated migrations — relaxed linting.
"migrations/versions/*.py" = ["E501", "UP007", "UP035", "I001", "RUF100", "W291"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "trafilatura.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pptx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "docx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fitz.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "whisper.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bs4.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiobotocore.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pgvector.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uuid_utils.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/course_supporter"]
